<resources>
    <string name="app_name">projetJEEMobile</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="telephone">Phone</string>
    <string name="email">Email</string>
    <string name="id">Id</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="addPersonne">Add a person</string>
    <string name="fetchPeople">Fetch people</string>
    <string name="people">People</string>
    <string name="name">Name</string>
    <string name="brands">Brands</string>
    <string name="addMarque">Add a brand</string>
    <string name="fetchBrands">Fetch brands</string>
    <string name="addCategorie">Add a categorie</string>
    <string name="categories">Categories</string>
    <string name="adresse">Address</string>
    <string name="ville">City</string>
    <string name="etat">State</string>
    <string name="code_zip">Zip code</string>
    <string name="addMagasin">Add a store</string>
    <string name="magasins">Stores</string>
    <string name="addClient">Add a client</string>
    <string name="clients">Clients</string>
    <string name="produits">Products</string>
    <string name="marque">Brand</string>
    <string name="categorie">Category</string>
    <string name="annee">Year</string>
    <string name="prix">Price</string>
    <string name="addProduit">Add a product</string>
    <string name="fetchProducts">Fectch products</string>
    <string name="addStock">Add a stock</string>
    <string name="fetchStocks">Fetch stocks</string>
    <string name="magasin">Store</string>
    <string name="stock">Stock</string>
    <string name="stocks">Stocks</string>
    <string name="produit">Product</string>
    <string name="quantite">Quantity</string>
    <string name="addEmploye">Add an employe</string>
    <string name="fetchEmployees">Fetch employees</string>
    <string name="employees">Employees</string>
    <string name="addCommande">Add an order</string>
    <string name="fetchCommandes">Fetch orders</string>
    <string name="orders">Orders</string>
    <string name="number">Number</string>
    <string name="orderDate">Order date</string>
    <string name="seller">Seller</string>
    <string name="status">Status</string>
    <string name="deliveryDate">Wanted delivery date</string>
    <string name="wantedDeliveryDate">Wanted delivery date</string>
    <string name="client">Client</string>
    <string name="store">Store</string>
    <string name="articles">Articles</string>
    <string name="addArticle">Add an article</string>
    <string name="fetchArticles">Fetch articles</string>
    <string name="line">Line</string>
    <string name="orderNumber">Order number</string>
    <string name="discount">Discount</string>
    <string name="channel_description">Notify the user when the stock is about to finish.</string>
    <string name="twooWheelers">Two Wheelers</string>
</resources>