<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtMagasinId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMagasinNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/txtMagasinId" />

    <TextView
        android:id="@+id/txtMagasinTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/telephone"
        app:layout_constraintTop_toBottomOf="@+id/txtMagasinNom" />

    <TextView
        android:id="@+id/txtMagasinEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/txtMagasinTelephone" />

    <TextView
        android:id="@+id/txtMagasinAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/adresse"
        app:layout_constraintTop_toBottomOf="@+id/txtMagasinEmail" />

    <TextView
        android:id="@+id/txtMagasinVille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/ville"
        app:layout_constraintTop_toBottomOf="@+id/txtMagasinAdresse" />

    <TextView
        android:id="@+id/txtMagasinEtat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/etat"
        app:layout_constraintTop_toBottomOf="@+id/txtMagasinVille" />

    <TextView
        android:id="@+id/txtMagasinCodeZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/code_zip"
        app:layout_constraintTop_toBottomOf="@+id/txtMagasinEtat" />

</androidx.constraintlayout.widget.ConstraintLayout>
