<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtClientId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtClientFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fieldVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClientId"
        />

    <TextView
        android:id="@+id/txtClientLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fieldVertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClientFirstName" />




    <TextView
        android:id="@+id/txtClientTelephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/telephone"
        app:layout_constraintTop_toBottomOf="@+id/txtClientLastName" />

    <TextView
        android:id="@+id/txtClientEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/txtClientTelephone" />

    <TextView
        android:id="@+id/txtClientAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/adresse"
        app:layout_constraintTop_toBottomOf="@+id/txtClientEmail" />

    <TextView
        android:id="@+id/txtClientVille"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/ville"
        app:layout_constraintTop_toBottomOf="@+id/txtClientAdresse" />

    <TextView
        android:id="@+id/txtClientEtat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/etat"
        app:layout_constraintTop_toBottomOf="@+id/txtClientVille" />

    <TextView
        android:id="@+id/txtClientCodeZip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/fieldVertical"
        android:text="@string/code_zip"
        app:layout_constraintTop_toBottomOf="@+id/txtClientEtat" />

</androidx.constraintlayout.widget.ConstraintLayout>
